Agregué un enunciado para completar los 10 de ejemplo en la celda final

--- a/AMLM/Activity_4/TC4033_Activity4_42.ipynb
+++ b/AMLM/Activity_4/TC4033_Activity4_42.ipynb
@@ -1819,6 +1819,7 @@
     "# Example sentences to test the translation model\n",
     "test_sentences = [\n",
     "    \"I am not a robot.\",\n",
+    "    \"I like to pet my dog\",\n",
     "    \"I can learn artificial intelligence.\",\n",
     "    \"The dinner is on the table\",\n",
     "    \"I am a human.\",\n",
@@ -1836,6 +1837,14 @@
     "# Run evaluation to print translations of test sentences\n",
     "evaluate_translations(model, test_sentences, eng_word2idx, spa_idx2word, max_len=MAX_SEQ_LEN, device=device)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9baa4ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
