Se colocan los compañeros que trabajaron en la actividad

--- a/AMLM/Activity_4/TC4033_Activity4_42.ipynb
+++ b/AMLM/Activity_4/TC4033_Activity4_42.ipynb
@@ -20,10 +20,7 @@
     "| Id        | Student                                 |\n",
     "|-----------|-----------------------------------------|\n",
     "| A01795654 | Raul Astorga Castro                     |\n",
-    "| A01795579 | Edson Misael Astorga Castro             |\n",
-    "| A01373679 | Luis Miguel Balderas González de Burgos |\n",
-    "| A01730466 | Sinaí Avalos Rivera                     |\n",
-    "| A01410682 | Carlos Miguel Arvizu Durán              |"
+    "| A01795579 | Edson Misael Astorga Castro             |"
    ]
   },
   {
